[tool.poetry]
name = "hh-database-engine"
version = "0.1.0"
description = ""
authors = ["Anna Tarazanova <an.tarazanova2016@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
